--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -700,6 +700,7 @@
     "deleteAdvertisementMsg": "¿Desea eliminar este anuncio?",
     "no": "No",
     "yes": "Sí",
+    "Rmedia": "Proporcionar contenido multimedia para mostrar",
     "view": "Ver",
     "edit": "Editar",
     "editAdvertisement": "Editar Anuncio",
