Revert "feat: implemented support to upload media in advertisement register c…"
This reverts commit 81d11fce41ef8f87b728dcbb8527b9bbcfb5ba41.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -702,7 +702,7 @@
     "delete": "Delete",
     "Rname": "Enter name of Advertisement",
     "Rtype": "Select type of Advertisement",
-    "Rmedia": "Provide media content to be displayed",
+    "Rlink": "Provide a link for content to be displayed",
     "RstartDate": "Select Start Date",
     "RendDate": "Select End Date",
     "RClose": "Close the window",
