Corrected Admin button functionality (#1509)
* Corrected placeholder value and added missing fields

* Corrected placeholder value and added missing fields

* Corrected placeholder value and added missing fields

* Corrected placeholder value and added missing fields

* added tests

* Update .env.example

* Update .env.example

* fixed

* fixed files

* added tests

* Corrected Add Admin Button's functionality

* Added superadmin role

* Added tests

* Addded Tests

* Added Tests

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -543,6 +543,7 @@
   "memberDetail": {
     "title": "Detalles del usuario",
     "addAdmin": "Agregar administrador",
+    "alreadyIsAdmin": "El Miembro ya es Administrador",
     "organizations": "Organizaciones",
     "events": "Eventos",
     "role": "Rol",
