--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -304,7 +304,8 @@
     "deleteActionItem": "Delete Action Item",
     "deleteActionItemMsg": "Do you want to remove this action item?",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "successfulCreation": "Action Item created successfully"
   },
   "eventListCard": {
     "location": "Location",
