add details modal

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -290,14 +290,18 @@
     "title": "Action Items",
     "actionItemCategory": "Action Item Category",
     "actionItemDetails": "Action Item Details",
+    "assignee": "Assignee",
+    "assigner": "Assigner",
     "createActionItem": "Create",
     "close": "Close",
     "searchByName": "Search By Name",
     "preCompletionNotes": "Pre Completion Notes",
     "postCompletionNotes": "Post Completion Notes",
+    "assignmentDate": "Assignment Date",
     "dueDate": "Due Date",
     "completionDate": "Completion Date",
     "isCompleted": "Completed",
+    "status": "Status",
     "latest": "Latest",
     "earliest": "Earliest",
     "editActionItem": "Edit Action Item",
