--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -226,7 +226,10 @@
     "searchName": "नाम दर्ज करें",
     "searchevent": "घटना दर्ज करें",
     "searchFirstName": "प्रथम नाम दर्ज करें",
-    "searchLastName": "अंतिम नाम दर्ज करो"
+    "searchLastName": "अंतिम नाम दर्ज करो",
+    "people": "लोग",
+    "sort": "भूमिका के आधार पर खोजें",
+    "actions": "क्रियाएँ"
   },
   "userListCard": {
     "joined": "में शामिल हो गए",
