--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -701,6 +701,8 @@
     "archievedAds": "Completed Campaigns",
     "pMessage": "Ads not present for this campaign.",
     "delete": "Delete",
+    "validLink": "Link is valid",
+    "invalidLink": "Link is invalid",
     "Rname": "Enter name of Advertisement",
     "Rtype": "Select type of Advertisement",
     "Rlink": "Provide a link for content to be displayed",
