add filters and design adjustments

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -301,6 +301,9 @@
     "dueDate": "Due Date",
     "completionDate": "Completion Date",
     "isCompleted": "Completed",
+    "active": "Active",
+    "completed": "Completed",
+    "clearFilters": "Clear Filters",
     "status": "Status",
     "latest": "Latest",
     "earliest": "Earliest",
