--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -287,34 +287,38 @@
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "organizationActionItems": {
-    "title": "Action Items",
     "actionItemCategory": "Action Item Category",
     "actionItemDetails": "Action Item Details",
     "assignee": "Assignee",
     "assigner": "Assigner",
-    "createActionItem": "Create",
-    "close": "Close",
-    "searchByName": "Search By Name",
-    "preCompletionNotes": "Pre Completion Notes",
-    "postCompletionNotes": "Post Completion Notes",
     "assignmentDate": "Assignment Date",
-    "dueDate": "Due Date",
-    "completionDate": "Completion Date",
-    "isCompleted": "Completed",
     "active": "Active",
-    "completed": "Completed",
     "clearFilters": "Clear Filters",
-    "status": "Status",
-    "latest": "Latest",
-    "earliest": "Earliest",
-    "editActionItem": "Edit Action Item",
+    "close": "Close",
+    "completed": "Completed",
+    "completionDate": "Completion Date",
+    "createActionItem": "Create",
     "deleteActionItem": "Delete Action Item",
     "deleteActionItemMsg": "Do you want to remove this action item?",
-    "yes": "Yes",
+    "details": "Details",
+    "dueDate": "Due Date",
+    "earliest": "Earliest",
+    "editActionItem": "Edit Action Item",
+    "isCompleted": "Completed",
+    "latest": "Latest",
     "no": "No",
+    "noActionItems": "No Action Items",
+    "options": "Options",
+    "preCompletionNotes": "Pre Completion Notes",
+    "postCompletionNotes": "Post Completion Notes",
+    "selectActionItemCategory": "Select an action item category",
+    "selectAssignee": "Select an assignee",
+    "status": "Status",
     "successfulCreation": "Action Item created successfully",
     "successfulUpdation": "Action Item updated successfully",
-    "successfulDeletion": "Action Item deleted successfully"
+    "successfulDeletion": "Action Item deleted successfully",
+    "title": "Action Items",
+    "yes": "Yes"
   },
   "eventListCard": {
     "location": "Location",
