--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -603,18 +603,6 @@
     "invalidDetailsMessage": "Please enter valid details.",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Kindly check your network connection and wait for a while."
   },
-  "userNavbar": {
-    "talawa": "Talawa",
-    "home": "Home",
-    "people": "People",
-    "events": "Events",
-    "chat": "Chat",
-    "donate": "Donate",
-    "settings": "Settings",
-    "language": "Language",
-    "logout": "Logout",
-    "close": "Close"
-  },
   "userOrganizations": {
     "allOrganizations": "All Organizations",
     "joinedOrganizations": "Joined Organizations",
@@ -623,10 +611,20 @@
     "nothingToShow": "Nothing to show here.",
     "selectOrganization": "Select Organization"
   },
-  "userSidebar": {
-    "yourOrganizations": "Your Organizations",
-    "noOrganizations": "You haven't joined any organization yet.",
-    "viewAll": "View all"
+  "orgLeftDrawer": {
+    "talawaUserPortal": "Talawa User Portal",
+    "menu": "Menu",
+    "posts": "Posts",
+    "events": "Events",
+    "donations": "Donations",
+    "signOut": "Sign out"
+  },
+  "userLeftDrawer": {
+    "talawaUserPortal": "Talawa User Portal",
+    "menu": "Menu",
+    "myOrganizations": "My Organizations",
+    "settings": "Settings",
+    "signOut": "Sign out"
   },
   "organizationSidebar": {
     "viewAll": "View all",
