--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -36,7 +36,9 @@
     "lowercase_check": "कम से कम एक छोटा अक्षर",
     "uppercase_check": "कम से कम एक बड़ा अक्षर",
     "numeric_value_check": "कम से कम एक संख्यात्मक मान",
-    "special_char_check": "कम से कम एक विशेष पात्र"
+    "special_char_check": "कम से कम एक विशेष पात्र",
+    "loading": "लोड हो रहा है...",
+    "selectOrg": "कोई संगठन चुनें"
   },
   "userLoginPage": {
     "title": "तलवा व्यवस्थापक",
@@ -66,7 +68,9 @@
     "successfullyRegistered": "सफलतापूर्वक पंजीकृत। कृपया स्वीकृत होने तक प्रतीक्षा करें।",
     "afterRegister": "पंजीकरण सफलतापूर्वक हो गया है। कृपया आपके अनुरोध को स्वीकार करने के लिए व्यवस्थापक की प्रतीक्षा करें।",
     "userLogin": "उपयोगकर्ता लॉगिन",
-    "OR": "या"
+    "OR": "या",
+    "loading": "लोड हो रहा है...",
+    "selectOrg": "कोई संगठन चुनें"
   },
   "latestEvents": {
     "eventCardTitle": "आगामी घटनाएँ",
