--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -36,7 +36,9 @@
     "lowercase_check": "Al menos una letra mayuscula",
     "uppercase_check": "Al menos una letra minúscula",
     "numeric_value_check": "Al menos un valor numérico",
-    "special_char_check": "Al menos un carácter especial"
+    "special_char_check": "Al menos un carácter especial",
+    "loading": "Cargando...",
+    "selectOrg": "Seleccione una organización"
   },
   "userLoginPage": {
     "title": "Administrador Talawa",
@@ -66,7 +68,9 @@
     "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado",
     "userLogin": "Inicio de sesión de usuario",
     "afterRegister": "Registrado exitosamente. Espere a que el administrador apruebe su solicitud.",
-    "OR": "O"
+    "OR": "O",
+    "loading": "Cargando...",
+    "selectOrg": "Seleccione una organización"
   },
   "latestEvents": {
     "eventCardTitle": "Próximos Eventos",
