--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -192,7 +192,12 @@
     "roleUpdated": "Rôle mis à jour.",
     "noResultsFoundFor": "Aucun résultat trouvé pour ",
     "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau.",
-    "cancel": "Annuler"
+    "cancel": "Annuler",
+    "admins": "Administrateurs",
+    "members": "Membres",
+    "join": "Rejoindre",
+    "joined": "Rejointes",
+    "withdraw": "Retirer"
   },
   "dashboard": {
     "title": "Tableau de bord",
@@ -616,7 +621,9 @@
     "createdOrganizations": "Organisations créées",
     "search": "Recherche",
     "nothingToShow": "Rien à montrer ici.",
-    "selectOrganization": "Sélectionnez une organisation"
+    "selectOrganization": "Sélectionnez une organisation",
+    "organizations": "Organizations",
+    "searchByName": "Recherche par nom"
   },
   "userSidebar": {
     "yourOrganizations": "Vos organisations",
