--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -335,7 +335,9 @@
     "sortPost": "Sort Post",
     "tag": " Your browser does not support the video tag",
     "postCreatedSuccess": "Congratulations! You have Posted Something.",
-    "pinPost": "Pin post"
+    "pinPost": "Pin post",
+    "Next": "Next Page",
+    "Previous": "Previous Page"
   },
   "postNotFound": {
     "post": "Post",
