fix: code coverage and update organization card buttons

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -201,7 +201,7 @@
     "cancel": "Cancel",
     "admins": "Admins",
     "members": "Members",
-    "join": "Join",
+    "joinNow": "Join Now",
     "joined": "Joined",
     "withdraw": "Widthdraw"
   },
