--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -195,7 +195,7 @@
     "cancel": "Annuler",
     "admins": "Administrateurs",
     "members": "Membres",
-    "join": "Rejoindre",
+    "joinNow": "Adhérer maintenant",
     "joined": "Rejointes",
     "withdraw": "Retirer"
   },
