--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -195,7 +195,7 @@
     "cancel": "रद्द करें",
     "admins": "व्यवस्थापक",
     "members": "सदस्य",
-    "join": "जुड़ना",
+    "joinNow": "अब शामिल हों",
     "joined": "शामिल हुए",
     "withdraw": "अनुरोध वापस लें"
   },
