--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -195,7 +195,7 @@
     "cancel": "Cancelar",
     "admins": "Administradores",
     "members": "Miembros",
-    "join": "unirse",
+    "joinNow": "Únete ahora",
     "joined": "Unido",
     "withdraw": "retirar"
   },
