--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -195,7 +195,7 @@
     "cancel": "取消",
     "admins": "管理員",
     "members": "成員",
-    "join": "加入",
+    "joinNow": "现在加入",
     "joined": "加入",
     "withdraw": "提取"
   },
