--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -89,6 +89,7 @@
     "menu": "Menu",
     "my organizations": "My Organizations",
     "users": "Users",
+    "communityProfile": "Community Profile",
     "logout": "Logout"
   },
   "leftDrawerOrg": {
@@ -199,6 +200,16 @@
     "noResultsFoundFor": "No results found for ",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
     "cancel": "Cancel"
+  },
+  "communityProfile": {
+    "communityProfile": "Community Profile",
+    "editProfile": "Edit Profile",
+    "communityProfileInfo": "These details will appear on the login/signup screen for you and your community members",
+    "communityName": "Community Name",
+    "wesiteLink": "Website Link",
+    "logo": "Logo",
+    "social": "Social Media Links",
+    "url": "Enter url"
   },
   "dashboard": {
     "title": "Dashboard",
