USER REDESIGN: redesign the Create Event Modal for the talawa user portal (#1629)
* user portal create events modal redesigned

* Removed updated README.md

* handled linting warnings

* Handled linting warnings

* handled linting warnings

* Handled linting warnings

* added tests for missing lines

--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -704,13 +704,6 @@
     "nothingToShow": "यहां दिखाने के लिए कुछ भी नहीं है.",
     "search": "खोज",
     "createEvent": "कार्यक्रम बनाएँ",
-    "eventTitle": "कार्यक्रम का शीर्षक",
-    "eventDescription": "घटना विवरण",
-    "eventLocation": "घटना स्थान",
-    "startDate": "आरंभ तिथि चुनें",
-    "endDate": "अंतिम तिथि चुनें",
-    "publicEvent": "सार्वजनिक समारोह",
-    "registerable": "पंजीकरण योग्य",
     "recurring": "पुनरावर्ती",
     "startTime": "समय शुरू",
     "endTime": "अंत समय",
@@ -719,7 +712,18 @@
     "listView": "लिस्ट व्यू",
     "calendarView": "कैलेंडर दृश्य",
     "allDay": "पूरे दिन",
-    "eventCreated": "ईवेंट सफलतापूर्वक बनाया और पोस्ट किया गया."
+    "eventCreated": "इवेंट सफलतापूर्वक बनाया और पोस्ट किया गया।",
+    "eventDetails": "घटना विवरण",
+    "eventTitle": "शीर्षक",
+    "enterTitle": "शीर्षक दर्ज करें",
+    "eventDescription": "विवरण",
+    "enterDescription": "विवरण दर्ज करें",
+    "eventLocation": "स्थान",
+    "enterLocation": "स्थान दर्ज करें",
+    "startDate": "प्रारंभ तिथि",
+    "endDate": "अंतिम तिथि",
+    "publicEvent": "सार्वजनिक है",
+    "registerable": "पंजीकृत करने योग्य है"
   },
   "userEventCard": {
     "location": "जगह",
