--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -702,13 +702,6 @@
     "nothingToShow": "No hay nada que mostrar aquí.",
     "search": "Buscar",
     "createEvent": "Crear evento",
-    "eventTitle": "Título del evento",
-    "eventDescription": "Descripción del evento",
-    "eventLocation": "Lugar del evento",
-    "startDate": "Seleccione la fecha de inicio",
-    "endDate": "Seleccionar fecha de finalización",
-    "publicEvent": "Evento público",
-    "registerable": "Registrable",
     "recurring": "Periódica",
     "startTime": "Hora de inicio",
     "endTime": "Hora de finalización",
@@ -717,7 +710,18 @@
     "listView": "Vista de la lista",
     "calendarView": "Vista de calendario",
     "allDay": "Todo el dia",
-    "eventCreated": "Evento creado y publicado exitosamente."
+    "eventCreated": "Evento creado y publicado exitosamente.",
+    "eventDetails": "Detalles del evento",
+    "eventTitle": "Título",
+    "enterTitle": "Ingrese el título",
+    "eventDescription": "Descripción",
+    "enterDescription": "Ingresar descripción",
+    "eventLocation": "Ubicación",
+    "enterLocation": "Ingresar Ubicación",
+    "startDate": "Fecha de inicio",
+    "endDate": "Fecha de finalización",
+    "publicEvent": "Es público",
+    "registerable": "Es registrable"
   },
   "userEventCard": {
     "location": "Ubicación",
